testphp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: phpnginx
  labels:
    app: "nginxapp"
spec:
  containers:
  - name: phptest
    image: trafex/php-nginx
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
    - name: myphpport
      containerPort: 8080
  volumes:
#  - name: myscret
#    secret:
#      secretName: mysqlsecret
  - name: config
    configMap:
     name: mysqlconfig
     items: 
      - key: SQL_USER
        path: SQL_USER
      - key: SQL_HOST
        path: SQL_HOST

    
---

apiVersion: v1
kind: Service
metadata:
  name: phpservice
spec:
  type: LoadBalancer
  selector:
    app: "nginxapp"
  ports:
  - port: 9090
    targetPort: myphpport
---
apiVersion: v1
kind: Pod
metadata:
  name: mysqlserver
  labels:
    app: "sqlapp"
spec:
  containers:
  - name: sqlserver
    image: mysql
    args:
    resources:
      requests:
        memory: "500Mi"
        cpu: "250m"
      limits:
        memory: "500Mi"
        cpu: "500m"
    ports:
    - name: mysqlport
      containerPort: 3306
---

apiVersion: v1
kind: Service
metadata: 
  name: sqlservice
spec:
  selector:
    app: "sqlapp"
  ports:
  - port: 9000
    targetPort: mysqlport
